--- a/ife_exercise_2v2.0/main.css
+++ b/ife_exercise_2v2.0/main.css
@@ -2,22 +2,24 @@
 * @Author: lj
 * @Date:   2017-06-18 21:18:47
 * @Last Modified by:   lj
-* @Last Modified time: 2017-06-20 22:58:09
+* @Last Modified time: 2017-06-28 22:09:52
 */
 /*导航栏*/
 nav{
 	width: 100%;
 	display:flex;
 	justify-content: center;
-	align-items: center;	
+	align-items: center;
+
 }
 .navbar{
 	margin-bottom: 0;
 }
 .nav{
 	width: 960px;
+	height: 60px;
 	display:flex;
-	padding:5px;
+	/*padding:5px;*/
 }
 .nav .logo{
 	width: 50px;
@@ -28,7 +30,9 @@ nav{
 .empty{
 	flex:1;
 }
-
+.nav a{
+	color:#fff;
+}
 .nav navbar-nav{
 	margin:10px 10px;
 	color: white;
@@ -38,12 +42,45 @@ ul.navbar-nav{
 	display: flex;
 	justify-content: flex-end;
 }
+.nav-module{
+	width:130px;
+}
+
+/*.nav-module:not(:target):not(:hover) > ul {
+  visibility: collapse;
+}*/
+/*.nav-module:hover{
+	background-color: #575757;
+	height:100%;
+}*/
+.droplist{
+	width:inherit;
+	/*background: #343434;*/
+}
+.nav-title{
+	text-align: right;
+	margin-top:5px;
+}
+.first-title{
+	text-align: center;
+}
+.droplist {
+	padding-left:0;
+	background-color: #575757;
+
+}
+.droplist-1{
+	list-style-type: none;
+	padding-right: 10px;
+	line-height: 25px;
+	text-align: right;
+}
 
 /*banner*/
 .top_image{
 	display:flex;
 	justify-content: center;
-	margin-top: 70px;
+	margin-top: 60px;
 }
 .fill_in_1,.fill_in_2{
 	background-color: rgb(45,112,121);
@@ -53,13 +90,15 @@ ul.navbar-nav{
 	min-width: 720px;
 	height: 260px;
 	padding-top: 50px;
-	background: url('images/top1.jpg') no-repeat;
-	background-size: 100% 100%;
+	background: url('images/top1.jpg') no-repeat top right;
+	background-color: #2d7079;
+	background-size: auto 100%;
 }
-.top_image #top2img{
+#top2img{
 	/*min-width:800px;*/
 	min-width: 720px;
 	height:260px;
+	overflow: hidden;
 }
 .banner p{
 	margin-left:35%;
@@ -110,11 +149,22 @@ ul.navbar-nav{
 	position: relative;
 	top:20px;
 }
+
+/*轮播图*/
 .center-img{
 	min-width:960px;
+	margin-bottom: 20px;
 }
 .center-img img{
 	width: 100%;
+}
+
+.carousel-text{
+	position: absolute;
+	bottom:0px;
+	left:0px;
+	padding:0;
+	text-align: left;
 }
 
 /*占空间的空div*/
@@ -126,11 +176,14 @@ ul.navbar-nav{
 .nav-tabs li{
 	font-size: 24px;
 	width: 25%;
-}
-.nav-tabs li a{
 	color:black;
 	text-align: center;
+	line-height: 60px;
 }
+.active{
+	border:1px solid #A7A7A7;
+}
+
 /*table*/
 .table caption{
 	color:black;
