--- a/ife_exercise_2v2.0/main.css
+++ b/ife_exercise_2v2.0/main.css
@@ -2,7 +2,7 @@
 * @Author: lj
 * @Date:   2017-06-18 21:18:47
 * @Last Modified by:   lj
-* @Last Modified time: 2017-06-28 22:09:52
+* @Last Modified time: 2017-06-28 22:48:58
 */
 /*导航栏*/
 nav{
@@ -46,13 +46,13 @@ ul.navbar-nav{
 	width:130px;
 }
 
-/*.nav-module:not(:target):not(:hover) > ul {
+.nav-module:not(:target):not(:hover) > ul {
   visibility: collapse;
-}*/
-/*.nav-module:hover{
+}
+.nav-module:hover{
 	background-color: #575757;
 	height:100%;
-}*/
+}
 .droplist{
 	width:inherit;
 	/*background: #343434;*/
