--- a/ife_exercise_2v2.0/main.css
+++ b/ife_exercise_2v2.0/main.css
@@ -2,7 +2,7 @@
 * @Author: lj
 * @Date:   2017-06-18 21:18:47
 * @Last Modified by:   lj
-* @Last Modified time: 2017-06-28 22:48:58
+* @Last Modified time: 2017-06-29 23:29:18
 */
 /*导航栏*/
 nav{
@@ -46,13 +46,13 @@ ul.navbar-nav{
 	width:130px;
 }
 
-.nav-module:not(:target):not(:hover) > ul {
+/*.nav-module:not(:target):not(:hover) > ul {
   visibility: collapse;
 }
 .nav-module:hover{
 	background-color: #575757;
 	height:100%;
-}
+}*/
 .droplist{
 	width:inherit;
 	/*background: #343434;*/
@@ -167,21 +167,62 @@ ul.navbar-nav{
 	text-align: left;
 }
 
+.carousel-container {
+      position: relative;
+      height: 166px;      
+      box-shadow: 0 0 5px green;
+      overflow: hidden;
+    }
+.carousel-wrap {
+	position: absolute;
+	width: 5760px;
+	height: 166px;
+	z-index: 1;
+}
+.carousel-wrap img {
+    float: left;
+    width: 960px;
+    height: 166px;
+    }
+.carousel-tips {
+	width: 150px;
+	height: 5px;
+	margin: 0 auto 50px auto;
+}
+.carousel-tip {
+	display: inline;
+	width: 15px;
+	height: 2px;
+	font-size: 2px;
+	line-height: 2px;
+	color:#A0A0A0;
+	background-color: #A0A0A0;
+	background-size: 100% 100%;
+}
+.carousel-tip-active {
+	color:#4E4E4E;
+	background-color: #4E4E4E;
+}
 /*占空间的空div*/
 .blank{
 	height: 30px;
 }
 
 /*tab bootstrap.min.css中基本都设置好了*/
-.nav-tabs li{
+.tab-item{
 	font-size: 24px;
 	width: 25%;
-	color:black;
+	color: #000;
 	text-align: center;
 	line-height: 60px;
 }
 .active{
 	border:1px solid #A7A7A7;
+	background: #3B3B3B;
+	color: #fff;
+}
+.tab-control{
+	display:none;
 }
 
 /*table*/
@@ -229,9 +270,14 @@ ul.navbar-nav{
 	width:200px;
 	height: 30px;
 }
-.form-content select,.form-content option,.form-content input{
+.option_tip{
 	color:#CCCCCC;
 }
+
+.form-content select,.form-content option,.form-content input{
+	color: #000;
+}
+
 .form-content input{
 	display: inline;
 	margin-left:50px;
