--- a/ife_exercise_4/main.css
+++ b/ife_exercise_4/main.css
@@ -2,7 +2,7 @@
 * @Author: lj
 * @Date:   2017-06-18 21:18:47
 * @Last Modified by:   lj
-* @Last Modified time: 2017-07-08 16:25:20
+* @Last Modified time: 2017-07-08 19:04:57
 */
 /*导航栏*/
 nav{
@@ -203,16 +203,35 @@ ul.navbar-nav{
 	z-index: 20;
 	width:400px;
 	height: 250px;
+	border:1px solid #7F7F7F;
 	background: #FFF; 
 }
-.edit-layout input{
-	display:block;
-	margin:5px auto;
-}
+
 .edit-layout label{
 	display: inline-block;
-	margin-left:30px;
 }
-.edit-layout button:nth-child(1){
-	/*margin:5px 10px;*/
+.label-input{
+	margin:20px 50px 10px 50px;
+}
+.label-input:nth-child(1){
+	margin-top: 40px;
+}
+.label-input:nth-child(3){
+	margin-bottom: 30px;
+}
+.delete-layout p{
+	width:100%;
+	margin:80px 100px;
+	font-size:18px;
+	font-weight:400;
+}
+#submit-delete,#submit-edit{
+	float:left;	
+	width:80px;
+	margin-left:80px;
+}
+#cancel-delete,#cancel-edit{
+	float: right;
+	width:80px;
+	margin-right:80px;
 }
